--- a/package.json
+++ b/package.json
@@ -85,14 +85,7 @@
       "resolved": "https://registry.npmjs.org/aws4/-/aws4-1.11.0.tgz",
       "version": "1.11.0"
     },
-    "axios": {
-      "integrity": "sha512-cD8FOb0tRH3uuEe6+evtAbgJtfxr7ly3fQjYcMcuPlgkwVS9xboaVIpcDV+cYQe+yGykgwZCs1pzjntcGa6l5g==",
-      "requires": {
-        "follow-redirects": "^1.14.7"
-      },
-      "resolved": "https://registry.npmjs.org/axios/-/axios-0.25.0.tgz",
-      "version": "0.25.0"
-    },
+    "axios": "^0.25.0",
     "balanced-match": {
       "integrity": "sha512-3oSeUO0TMV67hN1AmbXsK4yaqU7tjiHlbxRDZOpH0KW9+CeX4bRAaX0Anxt0tx2MrpRpWwQaPwIlISEJhYU5Pw==",
       "resolved": "https://registry.npmjs.org/balanced-match/-/balanced-match-1.0.2.tgz",
