--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "atlas-scientific-i2c": "^0.1.0",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "ip": "^1.1.5",
     "macaddress": "^0.5.2",
