--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "ip": "^1.1.5",
+    "jquery": "^3.6.0",
     "macaddress": "^0.5.2",
     "moment": "^2.29.1"
   }
