--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pidoser",
-  "version": "1.0.26",
+  "version": "1.0.27",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "atlas-scientific-i2c": "^0.1.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "coffee-script": "^1.12.7",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "ip": "^1.1.5",
