--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.29.1",
     "oled-font-pack": "^1.0.1",
     "onoff": "^6.0.3",
+    "pcf8574": "^2.0.1",
     "queue": "^6.0.2"
   }
 }
